@@ -1,4 +1,6 @@
 ver 0.19.8 (not yet released)
+* decoder
+  - dsdiff, dsf: allow ID3 tags larger than 4 kB
 
 ver 0.19.7 (2014/12/17)
 * input
